RandomAccessMcaFile - Added toString & stopwatch around reading chunks - Bugfixs after some light integration testing - unit tests yet to come